--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,78 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+    <style name="AppThemeNoActionBar" parent="android:Theme.Material">
         <!-- Customize your theme here. -->
+
+        <!-- No action bar-->
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+
+        <!-- App theme color -->
+        <item name="android:background">@color/back_blue</item>
+        <item name="android:windowBackground">@color/white_opaque</item>
+        <item name="android:colorBackground">@color/white_opaque</item>
+        <item name="android:textColor">@color/white_opaque</item>
+
+        <!-- App Widget Styles-->
+        <item name="android:editTextStyle">@style/EditTextSixPkTheme</item>
+
+        <item name="android:radioButtonStyle">@style/RadioButtonSixPkTheme</item>
+
+        <item name="android:buttonStyle">@style/ButtonSixPkTheme</item>
+
+        <item name="android:imageButtonStyle">@style/ImageButtonSixPkTheme</item>
+
+        <item name="android:spinnerStyle">@style/SpinnerSixPkTheme</item>
+
+        <item name="android:spinnerDropDownItemStyle">@style/SpinnerDropDownItemSixPkTheme</item>
+
+        <item name="android:seekBarStyle">@style/SeekBarSixPkTheme</item>
+
+    </style>
+
+    <color name="white_opaque">#FFFFFFFF</color>
+    <color name="pitch_black">#FF000000</color>
+    <color name="back_blue">#000080</color>
+
+
+    <style name="EditTextSixPkTheme" parent="android:Widget.EditText">
+        <item name="android:background">@drawable/sixpktheme_edit_text_holo_dark</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
+
+    <style name="RadioButtonSixPkTheme" parent="android:Widget.CompoundButton.RadioButton">
+        <item name="android:button">@drawable/sixpktheme_btn_radio_holo_dark</item>
+    </style>
+
+    <style name="ButtonSixPkTheme" parent="android:Widget.Button">
+        <item name="android:background">@drawable/sixpktheme_btn_default_holo_dark</item>
+        <item name="android:minHeight">48dip</item>
+        <item name="android:minWidth">64dip</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
+
+    <style name="ImageButtonSixPkTheme" parent="android:Widget.ImageButton">
+        <item name="android:background">@drawable/sixpktheme_btn_default_holo_dark</item>
+    </style>
+
+    <style name="SpinnerSixPkTheme" parent="android:Widget.Spinner">
+        <item name="android:background">@drawable/sixpktheme_spinner_background_holo_dark</item>
+        <item name="android:dropDownSelector">@drawable/sixpktheme_list_selector_holo_dark</item>
+    </style>
+
+    <style name="SpinnerDropDownItemSixPkTheme" parent="android:Widget.DropDownItem.Spinner">
+        <item name="android:checkMark">@drawable/sixpktheme_btn_radio_holo_dark</item>
+    </style>
+    <style name="SeekBarSixPkTheme" parent="android:Widget.SeekBar">
+        <item name="android:progressDrawable">@drawable/sixpktheme_scrubber_progress_horizontal_holo_dark</item>
+        <item name="android:indeterminateDrawable">@drawable/sixpktheme_scrubber_progress_horizontal_holo_dark</item>
+        <item name="android:minHeight">13dip</item>
+        <item name="android:maxHeight">13dip</item>
+        <item name="android:thumb">@drawable/sixpktheme_scrubber_control_selector_holo_dark</item>
+        <item name="android:thumbOffset">16dip</item>
+        <item name="android:paddingLeft">16dip</item>
+        <item name="android:paddingRight">16dip</item>
     </style>
 
 </resources>
