--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,20 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <edu.dartmouth.cs.codeit.sixpk.view.SlidingTabLayout
-        android:id="@+id/tab"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>
-
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/tab"/>
-</RelativeLayout>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|top"/>
+
+    <edu.dartmouth.cs.codeit.sixpk.view.SlidingTabLayout
+        android:id="@+id/tab"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
+        android:layout_gravity="center_horizontal|bottom" />
+</FrameLayout>
 
 
