--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,6 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     tools:context="edu.dartmouth.cs.codeit.sixpk.HistoryFragment">
 
     <!-- NEED TO change to a listview layout like historyFragment in myruns to display all
@@ -42,11 +42,12 @@
 
     <Button
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginBottom="80dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
         android:text="@string/showStatsButtonText"
         android:id="@+id/buttonShowStats"
-        android:onClick="onShowStatsClicked"
         android:layout_gravity="center_horizontal|bottom" />
 
 </FrameLayout>
