--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -1,57 +1,74 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="vertical"-->
+        <!--android:layout_gravity="center">-->
 
 
-    <!-- Need to replace textview/seekbar pairs with a dynamic listview of pairs for each
-    workout completed in the exercise-->
+        <!-- Need to replace textview/seekbar pairs with a dynamic listview of pairs for each
+        workout completed in the exercise-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Crunches:"
-        android:id="@+id/textView" />
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/listViewFeedback"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="120dp" />
 
-    <SeekBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/seekBar" />
+        <!--<TextView-->
+            <!--android:id="@+id/textView"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Crunches:" />-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Side Plank:"
-        android:id="@+id/textView2" />
+        <!--<SeekBar-->
+            <!--android:id="@+id/seekBar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content" />-->
 
-    <SeekBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/seekBar2" />
+        <!--<TextView-->
+            <!--android:id="@+id/textView2"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Side Plank:" />-->
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Workout Comment here"
-        android:id="@+id/textView3"
-        android:singleLine="true"/>
+        <!--<SeekBar-->
+            <!--android:id="@+id/seekBar2"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content" />-->
 
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="80dp"
-        android:text="@string/saveWorkoutButton"
-        android:id="@+id/buttonSaveWorkout"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="40dp"
-        android:onClick="onSaveClicked"
-        android:layout_gravity="bottom"/>
-    <Button
-        android:id="@+id/deleteWorkoutButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_marginRight="5dp"
-        android:onClick="onDeleteCLicked"
-        android:text="@string/deleteWorkoutButton" />
-</LinearLayout>
+        <!--<EditText-->
+            <!--android:id="@+id/textView3"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="Workout Comment here"-->
+            <!--android:singleLine="true" />-->
+    <!--</LinearLayout>-->
+
+        <Button
+            android:id="@+id/buttonSaveWorkout"
+            android:layout_width="fill_parent"
+            android:layout_height="80dp"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="40dp"
+            android:onClick="onSaveClicked"
+            android:text="@string/saveWorkoutButton"
+            android:layout_marginBottom="40dp" />
+
+        <Button
+            android:id="@+id/deleteWorkoutButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|right"
+            android:layout_marginRight="5dp"
+            android:onClick="onDeleteCLicked"
+            android:text="@string/deleteWorkoutButton" />
+
+</FrameLayout>
