--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -11,7 +11,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/listViewFeedback"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="45dp"
             android:layout_marginBottom="140dp" />
 
 
@@ -32,8 +32,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="5dp"
             android:onClick="onDeleteCLicked"
-            android:text="@string/deleteWorkoutButton" />
+            android:text="@string/deleteWorkoutButton"
+            android:layout_marginRight="5dp" />
 
 </FrameLayout>
