--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -1,9 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_gravity="left"
     android:orientation="vertical">
-
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -61,10 +59,10 @@
             android:id="@+id/textViewDifficulty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginTop="10dp"
             android:text="@string/startDifficultyText"
-            android:textSize="24dp"
-            android:layout_gravity="center_vertical" />
+            android:textSize="24dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -72,79 +70,80 @@
             android:layout_margin="10dp"
             android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textViewEasy"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/easyButton"
-                android:textSize="16dp"
-                android:gravity="center_horizontal" />
-            <TextView
-                android:id="@+id/textViewMed"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/mediumButton"
-                android:textSize="16dp"
-                android:gravity="center_horizontal" />
-            <TextView
-                android:id="@+id/textViewHard"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/hardButton"
-                android:textSize="16dp"
-                android:gravity="center_horizontal" />
+                <TextView
+                    android:id="@+id/textViewEasy"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:text="@string/easyButton"
+                    android:textSize="16dp" />
+
+                <TextView
+                    android:id="@+id/textViewMed"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:text="@string/mediumButton"
+                    android:textSize="16dp" />
+
+                <TextView
+                    android:id="@+id/textViewHard"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:text="@string/hardButton"
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
-        <RadioGroup
-            android:id="@+id/difficulty_radioGroup"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="20dp">
-
-            <RadioButton
-                android:id="@+id/radioButtonEasy"
+            <RadioGroup
+                android:id="@+id/difficulty_radioGroup"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:orientation="horizontal">
 
-            <RadioButton
-                android:id="@+id/radioButtonMedium"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                <RadioButton
+                    android:id="@+id/radioButtonEasy"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_weight="1" />
 
-            <RadioButton
-                android:id="@+id/radioButtonHard"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-        </RadioGroup>
-            </LinearLayout>
+                <RadioButton
+                    android:id="@+id/radioButtonMedium"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_weight="1" />
 
-
+                <RadioButton
+                    android:id="@+id/radioButtonHard"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_weight="1" />
+            </RadioGroup>
+        </LinearLayout>
     </LinearLayout>
 
     <Button
+        android:id="@+id/buttonStartWorkoutPrev"
         android:layout_width="fill_parent"
         android:layout_height="80dp"
-        android:text="@string/startWorkoutButton"
-        android:id="@+id/buttonStartWorkoutPrev"
+        android:layout_gravity="bottom"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:layout_marginTop="100dp"
-        android:layout_gravity="bottom"/>
-
+        android:text="@string/startWorkoutButton" />
 </LinearLayout>
