--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/logo3">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -54,6 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         android:layout_marginTop="100dp"
+        android:background="#00000000"
         android:orientation="vertical">
 
         <TextView
@@ -61,6 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="#00000000"
             android:layout_marginTop="40dp"
             android:text="@string/previewHelpClickText" />
 
@@ -91,5 +94,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="150dp"
+        android:background="#00000000"
         android:layout_marginTop="100dp" />
 </FrameLayout>
