--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -2,12 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/logo3"
     tools:context="edu.dartmouth.cs.project.sixpk.HistoryFragment">
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listViewHistory"
+        android:background="#00000000"
         android:layout_gravity="center_horizontal|top"
         android:layout_marginBottom="180dp" />
 
