--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/logo3"
     android:orientation="vertical">
 
     <LinearLayout
@@ -16,7 +17,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/app_name"
-            android:textSize="48dp" />
+            android:textSize="48dp"
+            android:autoText="true" />
 
         <ImageView
             android:id="@+id/imageViewLogo"
@@ -30,7 +32,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#00000000">
 
         <TextView
             android:id="@+id/textViewTime"
@@ -38,6 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="@string/startTimeText"
+            android:background="#00000000"
             android:textSize="24dp" />
 
         <NumberPicker
@@ -45,6 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="80dp"
             android:layout_gravity="right"
+            android:background="#00000000"
             android:layout_marginLeft="80dp"
             android:editable="false" />
     </LinearLayout>
@@ -53,13 +58,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#00000000">
 
         <TextView
             android:id="@+id/textViewDifficulty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:background="#00000000"
             android:layout_marginTop="10dp"
             android:text="@string/startDifficultyText"
             android:textSize="24dp" />
@@ -68,13 +75,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="#00000000">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:background="#00000000"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
@@ -84,6 +93,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
+                    android:background="#07000000"
                     android:text="@string/easyButton"
                     android:textSize="16dp" />
 
@@ -93,6 +103,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
+                    android:background="#00000000"
                     android:text="@string/mediumButton"
                     android:textSize="16dp" />
 
@@ -102,6 +113,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
+                    android:background="#00000000"
                     android:text="@string/hardButton"
                     android:textSize="16dp" />
 
@@ -111,18 +123,21 @@
                 android:id="@+id/difficulty_radioGroup"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:background="#00000000"
                 android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/radioButtonEasy"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="#00000000"
                     android:layout_marginLeft="30dp"
                     android:layout_weight="1" />
 
                 <RadioButton
                     android:id="@+id/radioButtonMedium"
                     android:layout_width="fill_parent"
+                    android:background="#00000000"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_weight="1" />
@@ -130,6 +145,7 @@
                 <RadioButton
                     android:id="@+id/radioButtonHard"
                     android:layout_width="fill_parent"
+                    android:background="#00000000"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
                     android:layout_weight="1" />
