--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -19,10 +19,40 @@
             android:text="Crunches"
             android:textSize="30dp" />
 
-        <ImageView
-            android:id="@+id/imageViewCurrExercise"
-            android:layout_width="200dp"
-            android:layout_height="200dp"/>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|top"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageViewCurrExercise"
+                android:layout_width="200dp"
+                android:layout_height="200dp" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/workoutCurrExerciseEndTimeText"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/currExerciseEndTime"
+                    android:textSize="22dp" />
+
+                <TextView
+                    android:id="@+id/workoutCurrExerciseEndTimeNumber"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -31,6 +61,7 @@
         android:layout_gravity="left|bottom"
         android:layout_marginBottom="60dp"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/workoutNextExercise"
             android:layout_width="wrap_content"
@@ -41,7 +72,7 @@
         <ImageView
             android:id="@+id/imageViewNextExercise"
             android:layout_width="100dp"
-            android:layout_height="100dp"/>
+            android:layout_height="100dp" />
     </LinearLayout>
 
 
@@ -74,17 +105,17 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/buttonPause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/pauseButtonText"
-        android:id="@+id/buttonPause"
+        android:layout_gravity="right|center_vertical"
         android:onClick="onPauseClicked"
-        android:layout_gravity="right|center_vertical" />
+        android:text="@string/pauseButtonText" />
 
     <Chronometer
+        android:id="@+id/chronometer"
         android:layout_width="191dp"
         android:layout_height="69dp"
-        android:id="@+id/chronometer"
         android:layout_gravity="center"
         android:gravity="center"
         android:textSize="48dp" />
