fixed v-up gif, change color

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,7 +33,7 @@
 
     <color name="white_opaque">#FFFFFFFF</color>
     <color name="pitch_black">#FF000000</color>
-    <color name="back_blue">#00498d</color>
+    <color name="back_blue">#0071db</color>
 
     <!--<style-->
         <!--name="MyPreferenceTheme">-->
