--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -6,8 +6,8 @@
     tools:context="edu.dartmouth.cs.project.sixpk.HistoryFragment">
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
         android:id="@+id/listViewHistory"
         android:background="#00000000"
         android:layout_gravity="center_horizontal|top"
